@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'java-library'
     id 'org.springframework.boot' version '2.7.6'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
@@ -18,6 +19,24 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    set('springCloudVersion', "2021.0.5")
+}
+
+dependencyManagement {
+    repositories {
+        mavenLocal()
+        gradlePluginPortal()
+        maven {
+            url 'https://repo.spring.io/release'
+        }
+    }
+
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+}
+
 dependencies {
     implementation 'org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter:7.18.0'
     implementation 'org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-webapp:7.18.0'
@@ -31,9 +50,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
-    implementation 'org.keycloak:keycloak-spring-boot-starter:21.0.2'
-    implementation 'org.keycloak:keycloak-admin-client:21.0.2'
-    implementation 'org.keycloak.bom:keycloak-adapter-bom:21.0.2'
+//    implementation 'org.keycloak:keycloak-spring-boot-starter:21.0.2'
+//    implementation 'org.keycloak:keycloak-admin-client:21.0.2'
+//    implementation 'org.keycloak.bom:keycloak-adapter-bom:21.0.2'
+
+    implementation 'org.springframework.session:spring-session-core'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure'
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
@@ -50,4 +74,8 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+bootRun {
+    jvmArgs = ["-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8659", "--add-opens=java.base/java.lang=ALL-UNNAMED"]
 }
